<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="33dp"
        android:paddingRight="33dp"
        tool:background="@mipmap/app_page_bg_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="70dp"
            android:text="@string/signup_pwd_input"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.cdkj.token.views.SignInEditClearImageLayout
            android:id="@+id/edt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hint_text="@string/signup_pwd_input_hint" />

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/signup_pwd_re_input"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.cdkj.token.views.SignInEditClearImageLayout
            android:id="@+id/edt_rePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hint_text="@string/signup_pwd_re_input_hint" />

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.cdkj.token.views.SignPwdRuleLayout
                android:id="@+id/srl_rule1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rule="@string/signup_pwd_rule1"/>

            <com.cdkj.token.views.SignPwdRuleLayout
                android:id="@+id/srl_rule2"
                android:layout_below="@+id/srl_rule1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rule="@string/signup_pwd_rule2"/>

            <com.cdkj.token.views.SignPwdRuleLayout
                android:id="@+id/srl_rule3"
                android:layout_below="@+id/srl_rule2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rule="@string/signup_pwd_rule3"/>


            <LinearLayout
                android:layout_alignBottom="@+id/srl_rule3"
                android:layout_alignParentRight="true"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/signup_pwd_level"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_level"
                    android:layout_marginLeft="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_gravity="right"
            android:layout_width="52dp"
            android:layout_height="52dp">

            <ImageButton
                android:id="@+id/btn_next"
                android:background="@mipmap/next_step"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>
</layout>