<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="27dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/linLayout_question_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_from"
                    android:textColor="@color/gray_666666"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_txt"
                    android:textColor="@color/text_black_cd"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="8dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/down_gray" />


            </LinearLayout>

            <View
                style="@style/style_split_line"
                android:layout_marginBottom="17dp"
                android:layout_marginTop="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_hint_1"
                android:textColor="@color/gray_666666" />

            <EditText
                android:id="@+id/edit_question"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="17dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/question_hint_2"
                android:textColor="@color/text_black_cd"
                android:textColorHint="@color/gray_999999"
                android:textSize="13sp" />

            <View
                style="@style/style_split_line"
                android:layout_marginBottom="17dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_hint_3"
                android:textColor="@color/gray_666666" />

            <EditText
                android:id="@+id/edit_replay"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="17dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/question_hint_4"
                android:textColor="@color/text_black_cd"
                android:textColorHint="@color/gray_999999"
                android:textSize="13sp" />

            <View
                style="@style/style_split_line"
                android:layout_marginBottom="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_hint_5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:descendantFocusability="blocksDescendants">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/photo_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </RelativeLayout>


            <View
                style="@style/style_split_line"
                android:layout_marginBottom="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_hint_6"
                android:textColor="@color/gray_666666" />

            <EditText
                android:id="@+id/edit_remark"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/question_remark_hint"
                android:paddingTop="5dp"
                android:textColor="@color/text_black_cd"
                android:textColorHint="@color/gray_999999"
                android:textSize="13sp" />

            <View
                style="@style/style_split_line"
                android:layout_marginBottom="17dp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_button_height"
                android:layout_marginBottom="50dp"
                android:background="@drawable/selector_btn_blue_change"
                android:text="@string/question_submit"
                android:textColor="@color/white" />


        </LinearLayout>


    </ScrollView>
</layout>
